// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<tfoot
  className="cf-y18mng"
>
  TableFoot
</tfoot>
`;

exports[`should render extra class name 1`] = `
<tfoot
  className="extra"
>
  TableFoot
</tfoot>
`;
